# cloud_registration

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.old  CMakeLists_old.txt  CMakePresets.json  CTestTestfile.cmake  E57WriterLib_Sprint_W1_Issues.md  LICENSE  README.md  SPRINT3_COMPLETION_SUMMARY.md  SPRINT3_FIXES_SUMMARY.md  SPRINT3_GIT_WORKFLOW.md  SPRINT3_IMPLEMENTATION_SUMMARY.md  SPRINT5_COMPLETION_REPORT.md  SPRINT5_ICP_IMPLEMENTATION_REPORT.md  SPRINT6_COMPLETION_REPORT.md  SPRINT7_STATUS.md  SPRINT8_COMPLETION_REPORT.md  SPRINT9_COMPLETION_REPORT.md  SPRINT9_SUMMARY.md  SPRINT_1_1_IMPLEMENTATION_SUMMARY.md  SPRINT_5_2_IMPLEMENTATION_SUMMARY.md  SPRINT_R4_COMPLETION_REPORT.md  SPRINT_R4_IMPLEMENTATION_SUMMARY.md  Sprint6_Implementation_Summary.md  basic_profiler_test.json  create_directories.ps1  create_test_cmake_files.ps1  create_test_directories.ps1  create_test_e57_codec.py  create_test_e57_files.py  debugging_implementation_summary.md  las_profile_report.txt  resources.qrc  run_sprint4_tests.ps1  setup.sh  (+50 more)
src/algorithms/: CMakeLists.txt  ICPRegistration.cpp  ICPRegistration.h  LeastSquaresAlignment.cpp  LeastSquaresAlignment.h  PointToPlaneICP.cpp  PointToPlaneICP.h
src/analysis/: CMakeLists.txt  DifferenceAnalysis.cpp
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/camera/: CMakeLists.txt  CameraController.cpp  CameraController.h
src/core/: CMakeLists.txt
src/crs/: CMakeLists.txt  CoordinateSystemManager.cpp
src/detection/: CMakeLists.txt  NaturalPointSelector.cpp  SphereDetector.cpp
src/export/: CMakeLists.txt  IFormatWriter.h  PointCloudExporter.cpp
src/features/: CMakeLists.txt
src/implementations/: CMakeLists.txt  VoxelGridProcessor.cpp
src/interfaces/: CMakeLists.txt
src/optimization/: CMakeLists.txt
src/parsers/: CMakeLists.txt
src/performance/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h
src/quality/: CMakeLists.txt  PDFReportGenerator.cpp  QualityAssessment.cpp
src/registration/: AlignmentEngine.cpp  AlignmentEngine.h  CMakeLists.txt  ErrorAnalysis.cpp  FeatureBasedRegistration.cpp  PoseGraphBuilder.cpp  PoseGraphBuilder.h  RegistrationProject.cpp  RegistrationProject.h  RegistrationWorkflowWidget.cpp  RegistrationWorkflowWidget.h  Target.cpp  Target.h  TargetCorrespondence.cpp  TargetManager.cpp  TargetManager.h
src/rendering/: CMakeLists.txt  GpuCuller.cpp  GpuCuller.h  LODManager.cpp  OpenGLRenderer.cpp
src/ui/: AlignmentControlPanel.cpp  AlignmentControlPanel.h  CMakeLists.txt  ExportDialog.cpp  ExportDialog.h  ICPProgressWidget.cpp  ICPProgressWidget.h  TargetDetectionDialog.cpp  UIThemeManager.h  UserPreferences.h  ViewerToolbar.cpp
tests/: CMakeLists.txt  E57TestFramework.cpp  E57TestFramework.h  MockE57Writer.h  PerformanceProfiler.cpp  PerformanceProfiler.h  README_ADVANCED_TESTING.md  Sprint6Test.cpp  TestE57DataManager.cpp  advanced_test_executor.cpp  advanced_test_executor.h  advanced_test_file_generator.cpp  advanced_test_file_generator.h  automated_test_oracle.cpp  automated_test_oracle.h  integration_test_suite.cpp  integration_test_suite.h  intelligent_bug_manager.cpp  intelligent_bug_manager.h  sample_test.cpp  spectrum_based_tester.cpp  spectrum_based_tester.h  test_camera_controller.cpp  test_data_manager.cpp  test_data_manager.h  test_decoupling_e57parser.cpp  test_e57parser.cpp  test_e57parser_sprint4_comprehensive.cpp  test_e57parsercore.cpp  test_e57parserlib.cpp  test_e57parserlib_sprint3.cpp  test_e57writer_lib.cpp  test_error_analysis.cpp  test_gpuculler.cpp  test_icp_registration.cpp  test_integration.cpp  test_lasparser.cpp  test_least_squares_alignment.cpp  test_libe57_linkage.cpp  test_mainpresenter.cpp  (+32 more)
tests/algorithms/: CMakeLists.txt  test_icp_registration.cpp  test_least_squares_alignment.cpp  test_point_to_plane_icp.cpp
tests/analysis/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_icp_result_handling.cpp  test_mainpresenter.cpp  test_mainpresenter_targetdetection.cpp
tests/camera/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_performance_profiler.cpp  test_performanceprofiler.cpp  test_profiling_macros.cpp  test_projectmanager.cpp  test_voxelgridfilter.cpp
tests/crs/: CMakeLists.txt  test_coordinate_system_manager.cpp
tests/demos/: sprint_r3_demo.cpp  test_e57_parsing.cpp  test_e57_simple.cpp  test_las_parser.cpp  test_las_real_file.cpp  test_sprint1_2_demo.cpp  test_sprint1_2_implementation.cpp  test_sprint1_3_implementation.cpp  test_sprint1_implementation.cpp  test_sprint2_1_integration.cpp  test_sprint2_1_manual.cpp  test_sprint2_2_profiling.cpp  test_sprint2_2_profiling_demo.cpp  test_sprint2_2_stress.cpp  test_sprint2_simple.cpp  test_sprint3_4_demo.cpp  test_sprint3_demo.cpp  test_sprint_r1_lod_demo.cpp  test_sprint_r2_demo.cpp  test_voxel_manual.cpp  test_voxel_simple.cpp
tests/detection/: CMakeLists.txt
tests/e57_parser/: TestE57BinaryReader.cpp  TestE57HeaderParser.cpp  TestE57HeaderParserSimple.cpp  TestE57XmlParser.cpp
tests/export/: CMakeLists.txt  test_export_functionality.cpp
tests/features/: CMakeLists.txt
tests/implementations/: CMakeLists.txt
tests/integration/: CMakeLists.txt  end_to_end_testing.cpp  manual_alignment_e2e_test.cpp  test_integration.cpp  test_target_detection_integration.cpp
tests/interfaces/: CMakeLists.txt
tests/linkage_tests/: TestLibE57Linkage.cpp
tests/mocks/: CMakeLists.txt  MockE57Parser.h  MockE57Writer.h  MockMainView.h  MockPointCloudLoadManager.h  MockPointCloudViewer.h  MockProjectManager.h
tests/optimization/: CMakeLists.txt  test_bundleadjustment.cpp
tests/parsers/: CMakeLists.txt  E57TestFramework.cpp  test_e57_linkage.cpp  test_e57parser.cpp  test_e57parser_sprint4_comprehensive.cpp  test_e57parsercore.cpp  test_e57parserlib.cpp  test_lasparser.cpp
tests/performance/: CMakeLists.txt  test_performance_optimization.cpp  test_performance_validation.cpp
tests/quality/: CMakeLists.txt  test_quality_functionality.cpp  test_quality_reporting.cpp
tests/registration/: CMakeLists.txt  test_alignment_engine.cpp  (+9 more)
(+735 files in other folders)
